--- a/DocumentManagemnetService/Views/MyDocumentsView.xaml
+++ b/DocumentManagemnetService/Views/MyDocumentsView.xaml
@@ -1,20 +1,20 @@
-﻿<UserControl x:Class="DocumentManagementService.Views.PublicDocumentsView"
+﻿<UserControl x:Class="DocumentManagementService.Views.MyDocumentsView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:DocumentManagementService.Views" 
-             xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes" 
              xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
+             xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes" 
              mc:Ignorable="d" 
-             d:DesignHeight="420" d:DesignWidth="900">
+             d:DesignHeight="450" d:DesignWidth="800">
     <UserControl.Resources>
         <DataTemplate x:Key="ComboboxItemTemplate">
-                <StackPanel Orientation="Horizontal">
-                    <CheckBox IsChecked="True" 
+            <StackPanel Orientation="Horizontal">
+                <CheckBox IsChecked="True" 
                               Background="{DynamicResource PrimaryHueDarkBrush}"/>
-                    <TextBlock Text="{Binding Title}"/>
-                </StackPanel>
+                <TextBlock Text="{Binding Title}"/>
+            </StackPanel>
         </DataTemplate>
 
         <DataTemplate x:Key="SelectionBoxTemplate">
@@ -25,7 +25,7 @@
             <ContentPresenter x:Name="Presenter"
                Content="{Binding}"
                ContentTemplate="{StaticResource ComboboxItemTemplate}" />
-            
+
             <DataTemplate.Triggers>
                 <DataTrigger Binding="{Binding RelativeSource={RelativeSource AncestorType=ComboBoxItem}}" 
                              Value="{x:Null}">
@@ -35,7 +35,7 @@
             </DataTemplate.Triggers>
         </DataTemplate>
     </UserControl.Resources>
-    
+
     <Grid Background="{DynamicResource {x:Static SystemColors.MenuBrushKey}}">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
@@ -55,7 +55,7 @@
                       Margin="20,0,0,0" 
                       materialDesign:HintAssist.Hint="Тип документа" Height="33">
             </ComboBox>
-            <ComboBox Margin="20,0,0,0" materialDesign:HintAssist.Hint="Автор" Height="33"/>
+
             <TextBlock Margin="20,10,0,0" Text="Дата загрузки:" Height="18" Foreground="Gray"/>
             <DatePicker Margin="10,0,0,0"
                         Width="100"
@@ -77,17 +77,28 @@
                   IsReadOnly="True"
                   SelectedItem="{Binding SelectedDocument}">
             <DataGrid.Columns>
-                <DataGridTextColumn Header="Название" Binding="{Binding Title}" Width="*"/>
+                <DataGridTextColumn Header="Название" Binding="{Binding Title}" Width="220"/>
                 <DataGridTextColumn Header="Категория" Binding="{Binding Category}" Width="150"/>
                 <DataGridTextColumn Header="Дата загрузки" Binding="{Binding CreatedAt, StringFormat=d}" Width="150"/>
-                <DataGridTextColumn Header="Автор" Binding="{Binding FullName}" Width="300"/>
+                <DataGridTextColumn Header="Статус" Binding="{Binding Status}" Width="150"/>
+                <DataGridTemplateColumn Width="100">
+                    <DataGridTemplateColumn.CellTemplate>
+                        <DataTemplate>
+                            <Button 
+                                Style="{StaticResource MaterialDesignIconButton}" 
+                                MouseRightButtonDown="Button_Click" 
+                                Width="50" Height="20">
+                                <materialDesign:PackIcon Kind="DotsHorizontal" />
+                            </Button>
+                        </DataTemplate>
+                    </DataGridTemplateColumn.CellTemplate>
+                </DataGridTemplateColumn>
             </DataGrid.Columns>
             <i:Interaction.Triggers>
                 <i:EventTrigger EventName="MouseDoubleClick">
                     <i:InvokeCommandAction 
                                 Command="{Binding MouseDoubleClickCommand}"
-                                CommandParameter="{Binding ElementName=DocumentGrid, 
-                                Path=SelectedItem}" />
+                                CommandParameter="{Binding ElementName=DocumentGrid}" />
                 </i:EventTrigger>
             </i:Interaction.Triggers>
         </DataGrid>
