--- a/DocumentManagemnetService/Views/RoutesView.xaml
+++ b/DocumentManagemnetService/Views/RoutesView.xaml
@@ -1,62 +1,78 @@
-﻿<Window x:Class="DocumentManagementService.Views.RoutesView"
+﻿<UserControl x:Class="DocumentManagementService.Views.RoutesView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:DocumentManagementService.Views"
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes" 
-             xmlns:graph="clr-namespace:DocumentManagementService"
-
+             xmlns:graph="clr-namespace:DocumentManagementService" xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-    <StackPanel>
-        <StackPanel Orientation="Horizontal" Background="#78B24B" Height="50">
-            <Button Name="CreateRoute"
-                    Style="{StaticResource MaterialDesignFlatButton}"  
-                    Margin="5" Content="Создать маршрут" 
-                    Command="{Binding CreateRouteCommand}" Foreground="White" Cursor="Hand" Visibility="Collapsed"/>
-            <Button Name="EditRoute"
-                    Style="{StaticResource MaterialDesignFlatButton}"  Margin="5" Content="Изменить выбранный маршрут" 
-                    Command="{Binding EditRouteCommand}" Foreground="White" Visibility="Collapsed"/>
-        </StackPanel>
-        <Grid Background="White"  Width="{Binding ActualWidth,
-              RelativeSource = {RelativeSource AncestorType = {x:Type UserControl}}}"
-      Height="{Binding ActualHeight,
-              RelativeSource ={RelativeSource AncestorType = {x:Type UserControl}}}">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="3*"/>
-                <ColumnDefinition Width="3*"/>
-            </Grid.ColumnDefinitions>
-            <StackPanel Orientation="Horizontal">
-                <ComboBox Style="{StaticResource MaterialDesignDataGridComboBox}"
+    <Grid Background="White">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="*"/>
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="50"/>
+        </Grid.RowDefinitions>
+        <StackPanel Orientation="Horizontal" Grid.Row="0" Grid.Column="0">
+            <TextBox
+                    Margin="15,0,0,0"
+                    Width="200"
+                    materialDesign:HintAssist.Hint="Поиск"
+                    Text="{Binding SearchQuery}"/>
+            <materialDesign:PackIcon Kind="Magnify" Height="26" Width="25" />
+            <ComboBox Style="{StaticResource MaterialDesignDataGridComboBox}"
                         Margin="10"
-                        Width="200"
+                        Width="160"
                       ItemsSource="{Binding Categories}"
                       SelectedItem="{Binding SelectedCategory}"
-                      materialDesign:HintAssist.Hint="Категория документа" Foreground="White" BorderBrush="White"/>
+                      materialDesign:HintAssist.Hint="Категория документа" 
+                          Foreground="White" BorderBrush="White"/>
             </StackPanel>
 
-            <ListBox
+        <ListBox Name="RoutesList" 
+                 Grid.Row="1" Grid.Column="0"
                  Margin="10,10,10, 0"
-                VerticalAlignment="Stretch"
+                 VerticalAlignment="Stretch"
                  ItemsSource="{Binding Routes}"
-                 SelectedItem="{Binding SelectedRoute}" Background="#78B24B" Foreground="White">
-                <ListBox.ItemTemplate>
-                    <DataTemplate>
-                        <StackPanel Margin="8">
-                            <TextBlock Text="{Binding Name}" FontWeight="Bold" />
-                        </StackPanel>
-                    </DataTemplate>
-                </ListBox.ItemTemplate>
-            </ListBox>
-            <Border Margin="10,10,10,10"
-                Grid.Column="1" BorderBrush="LightGray" BorderThickness="1"  Background="{DynamicResource PrimaryHueDarkBrush}">
-                <graph:RouteGraphLayout x:Name="graphLayout"
-                                        IsEnabled="False"
-                               Graph="{Binding Graph}"
-                                LayoutAlgorithmType="Tree"
-                               OverlapRemovalAlgorithmType="FSA" />
-            </Border>
-        </Grid>
-    </StackPanel>
-</Window>
+                 SelectedItem="{Binding SelectedRoute}">
+            <ListBox.ItemTemplate>
+                <DataTemplate>
+                    <StackPanel Margin="8">
+                        <TextBlock Text="{Binding Name}" FontWeight="Bold" />
+                    </StackPanel>
+                </DataTemplate>
+            </ListBox.ItemTemplate>
+            <i:Interaction.Triggers>
+                <i:EventTrigger EventName="MouseDoubleClick">
+                    <i:InvokeCommandAction 
+                                Command="{Binding EditRouteCommand}"
+                                CommandParameter="{Binding ElementName=RoutesList}" />
+                </i:EventTrigger>
+            </i:Interaction.Triggers>
+        </ListBox>
+        <Border Margin="10,10,10,0"
+                Grid.Column="1" Grid.Row="1"
+             BorderThickness="1">
+            <graph:RouteGraphLayout x:Name="graphLayout" IsEnabled="False"
+                    Graph="{Binding Graph}" LayoutAlgorithmType="Tree" 
+                                    OverlapRemovalAlgorithmType="FSA" />
+        </Border>
+        <StackPanel Grid.Row="2">
+            <Button Content="Отправить на согласование" Width="225"
+                    Command="{Binding OnApproveCommand}"
+                    Background="{x:Null}" 
+                    BorderBrush="#FF040000"/>
+        </StackPanel>
+        <StackPanel Grid.Row="2" Grid.Column="1">
+            <Button Content="Отмена" Width="140"
+                    Command="{Binding CancelCommand}"
+                    BorderBrush="Black"
+                    Background="{x:Null}"/>
+        </StackPanel>
+    </Grid>
+</UserControl>
