--- a/DocumentManagemnetService/Views/MyDocumentsView.xaml
+++ b/DocumentManagemnetService/Views/MyDocumentsView.xaml
@@ -11,9 +11,9 @@
     <UserControl.Resources>
         <DataTemplate x:Key="ComboboxItemTemplate">
             <StackPanel Orientation="Horizontal">
-                <CheckBox IsChecked="True" 
+                <CheckBox IsChecked="{Binding IsChecked, Mode=TwoWay}" 
                               Background="{DynamicResource PrimaryHueDarkBrush}"/>
-                <TextBlock Text="{Binding Title}"/>
+                <TextBlock Text="{Binding CategoryName}"/>
             </StackPanel>
         </DataTemplate>
 
@@ -47,22 +47,24 @@
                 <TextBox                     
                     Width="200"
                     materialDesign:HintAssist.Hint="Поиск"
-                    Text="{Binding SearchQuery}"/>
+                    Text="{Binding Title}"/>
                 <materialDesign:PackIcon Kind="Magnify" Height="26" Width="25" />
             </StackPanel>
             <ComboBox ItemTemplate="{StaticResource ComboBoxTemplate}" 
-                      ItemsSource="{Binding ItemsSource}" 
+                      ItemsSource="{Binding Categories}" 
                       Margin="20,0,0,0" 
                       materialDesign:HintAssist.Hint="Тип документа" Height="33">
             </ComboBox>
 
             <TextBlock Margin="20,10,0,0" Text="Дата загрузки:" Height="18" Foreground="Gray"/>
-            <DatePicker Margin="10,0,0,0"
+            <DatePicker SelectedDate="{Binding FromDate}"
+                        Margin="10,0,0,0"
                         Width="100"
                         materialDesign:HintAssist.Hint="От"
                         materialDesign:TextFieldAssist.HasClearButton="True"
                         Style="{StaticResource MaterialDesignFloatingHintDatePicker}"/>
-            <DatePicker Margin="10,0,0,0"
+            <DatePicker SelectedDate="{Binding ToDate}"
+                        Margin="10,0,0,0"
                         Width="100"
                         materialDesign:HintAssist.Hint="До"
                         materialDesign:TextFieldAssist.HasClearButton="True"
