--- a/DocumentManagemnetService/Views/RouteEditorView.xaml
+++ b/DocumentManagemnetService/Views/RouteEditorView.xaml
@@ -24,17 +24,18 @@
 
 
         <StackPanel Grid.Column="1" Margin="10" Cursor="Hand">
-            
+
             <StackPanel Orientation="Vertical">
-                <TextBlock Margin="10" Text="Название маршрута" FontSize="22"/>
+                <TextBlock Margin="10" Text="Название маршрута" FontSize="16"/>
                 <TextBox Text="{Binding RouteName}"
                 Style="{StaticResource MaterialDesignOutlinedTextBox}"  Width="379"
                          Foreground="Black" FontWeight="Bold" BorderBrush="Black"/>
             </StackPanel>
-            
-            <TextBlock Text="Этапы маршрута:" Margin="10" FontWeight="Bold" FontSize="22"/>
+
+            <TextBlock Text="Этапы маршрута:" Margin="10" FontWeight="Bold" FontSize="16"/>
             <ScrollViewer>
-                <ListBox ItemsSource="{Binding Steps}" SelectedItem="{Binding SelectedStep}" 
+                <ListBox ItemsSource="{Binding Steps}" 
+                         SelectedItem="{Binding SelectedStep}" 
                          Height="66" BorderBrush="#FF020000">
                     <ListBox.ItemTemplate>
                         <DataTemplate>
@@ -45,46 +46,65 @@
             </ScrollViewer>
 
             <StackPanel Orientation="Horizontal" Margin="8">
+                
                 <StackPanel Orientation="Horizontal" Cursor="Hand" Width="144" Height="55">
-                    <materialDesign:PackIcon Kind="ArrowUp" 
-                                             Margin="0,10,0,0" Height="40" Width="32" Foreground="#FF0A0000" />
                     <Button Style="{StaticResource MaterialDesignFlatButton}"  
-                            Margin="5" Content="Вверх" Command="{Binding MoveUpCommand}"
-                            Width="100" FontSize="22" Height="40"/>
+                            Command="{Binding MoveUpCommand}"
+                            Width="133" FontSize="16" Height="40">
+                        <StackPanel Orientation="Horizontal" Width="86">
+                            <materialDesign:PackIcon Kind="ArrowUp" 
+                                             Height="26" Width="26" 
+                                                     Foreground="#FF0A0000" />
+                            <TextBlock Text="Вверх" Height="25"/>
+                        </StackPanel>
+                    </Button>
                 </StackPanel>
+                
                 <StackPanel Orientation="Horizontal">
-                    <materialDesign:PackIcon Kind="ArrowDown" 
-                                             Margin="0,10,0,0" Height="40" Width="32" Foreground="#FF0A0000" />
+
                     <Button Style="{StaticResource MaterialDesignFlatButton}"  
-                            Margin="5" Content="Вниз" Command="{Binding MoveDownCommand}" 
-                            FontSize="22" Height="40"/>
+                            Margin="5" Command="{Binding MoveDownCommand}" 
+                            FontSize="16" Height="40">
+                        <StackPanel Orientation="Horizontal" Width="86">
+                            <materialDesign:PackIcon Kind="ArrowDown" 
+                                              Height="30" Width="32" Foreground="#FF0A0000" />
+                            <TextBlock Text="Вниз" Height="25"/>
+                        </StackPanel>
+                    </Button>
                 </StackPanel>
+
                 <StackPanel Orientation="Horizontal" Width="203">
-                    <materialDesign:PackIcon Kind="CloseCircleOutline" 
-                                             Margin="0,10,0,0" Height="37" Width="32" Foreground="#FF0A0000" />
                     <Button Style="{StaticResource MaterialDesignFlatButton}"
-                            Margin="5" Content="Удалить" Command="{Binding RemoveStepCommand}"
-                            FontSize="22" Height="40"/>
+                            Margin="5" Command="{Binding RemoveStepCommand}"
+                            FontSize="16" Height="40">
+                        <StackPanel Orientation="Horizontal">
+                            <materialDesign:PackIcon Kind="CloseCircleOutline" 
+                                              Height="30" Width="32" Foreground="#FF0A0000" />
+                            <TextBlock Margin="10,0,0,0" Text="Удалить" Height="25"/>
+                        </StackPanel>
+                    </Button>
                 </StackPanel>
+                
             </StackPanel>
 
             <StackPanel>
-                <TextBlock Text="Отдел" Width="300" FontSize="22"/>
-                <ComboBox Margin="10" Style="{StaticResource MaterialDesignOutlinedComboBox}"
-                        ItemsSource="{Binding Users}"
-                          SelectedItem="{Binding SelectedUser}"                    Width="301" Height="64" Background="{x:Null}">
+                <TextBlock Text="Отдел" Width="300" FontSize="16"/>
+                <ComboBox Margin="10"                        
+                           ItemsSource="{Binding Units}"
+                          SelectedItem="{Binding SelectedUnit}"                    
+                          Width="300" Height="50" Background="{x:Null}">
                     <ComboBox.ItemTemplate>
                         <DataTemplate>
-                            <TextBlock Text="{Binding Display}" />
+                            <TextBlock Text="{Binding UnitName}" FontSize="16" />
                         </DataTemplate>
                     </ComboBox.ItemTemplate>
                 </ComboBox>
-                <TextBlock Text="Сотрудник" Width="300" FontSize="22"/>
-                <ComboBox Style="{StaticResource MaterialDesignOutlinedComboBox}"
-                        ItemsSource="{Binding Users}"
+                <TextBlock Text="Сотрудник" Width="300" FontSize="16"/>
+                <ComboBox
+                        ItemsSource="{Binding FilteredUsers}"
                           SelectedItem="{Binding SelectedUser}"
                     
-                    Width="299" Height="64" Margin="10" Background="{x:Null}">
+                    Width="300" Height="50" Margin="10" Background="{x:Null}">
                     <ComboBox.ItemTemplate>
                         <DataTemplate>
                             <TextBlock Text="{Binding Display}" />
@@ -94,9 +114,9 @@
 
                 <Button Style="{StaticResource MaterialDesignFlatButton}" Margin="5" Content="Добавить" Command="{Binding AddStepCommand}" Cursor="Hand" Width="313"/>
             </StackPanel>
-            
-            
-            
+
+
+
             <Button
                     Style="{StaticResource MaterialDesignFlatButton}"
                     Content="Сохранить маршрут"
@@ -105,8 +125,8 @@
             <Button Command="{Binding DeleteCommand}"
                     Style="{StaticResource MaterialDesignFlatButton}" 
                     Content="Удалить маршрут"  Foreground="Red"/>
-            
+
         </StackPanel>
-        
+
     </Grid>
 </Window>
