--- a/DocumentManagemnetService/Views/AdminView.xaml
+++ b/DocumentManagemnetService/Views/AdminView.xaml
@@ -1,12 +1,64 @@
-﻿<Window x:Class="DocumentManagementService.Views.AdminView"
+﻿<UserControl x:Class="DocumentManagementService.Views.AdminView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:DocumentManagementService.Views"
-        mc:Ignorable="d"
-        Title="AdminView" Height="450" Width="800">
-    <Grid>
-        
+        xmlns:local="clr-namespace:DocumentManagementService.Views" 
+             xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes" 
+             xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
+             mc:Ignorable="d">
+    <Grid Margin="10" Background="{DynamicResource {x:Static SystemColors.MenuBrushKey}}">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
+        <StackPanel Orientation="Horizontal">
+            <StackPanel Orientation="Horizontal">
+                <TextBox                     
+                    Width="200"
+                    materialDesign:HintAssist.Hint="Поиск"
+                    Text="{Binding Name, UpdateSourceTrigger=PropertyChanged}"/>
+                <materialDesign:PackIcon Kind="Magnify" Height="26" Width="25" />
+            </StackPanel>
+            <ComboBox ItemTemplate="{StaticResource ComboBoxTemplate}" 
+                      ItemsSource="{Binding Units}" 
+                      Margin="20,0,0,0" 
+                      materialDesign:HintAssist.Hint="Отдел" Height="33">
+            </ComboBox>
+            <ComboBox ItemTemplate="{StaticResource UnitComboBoxTemplate}" 
+                      ItemsSource="{Binding Roles}" 
+                      Margin="20,0,0,0" 
+                      materialDesign:HintAssist.Hint="Должность" Height="33">
+            </ComboBox>
+
+        </StackPanel>
+        <Button Command="{Binding AddUserCommand}"  Background="{x:Null}" BorderBrush="{x:Null}" 
+                HorizontalAlignment="Right" VerticalAlignment="Top">
+            <StackPanel Orientation="Horizontal">
+                <materialDesign:PackIcon Kind="Add"/>
+                <TextBlock Text="Новый пользователь"/>
+            </StackPanel>
+        </Button>
+        <DataGrid x:Name="UserGrid" Grid.Row="1"
+                  ItemsSource="{Binding FilteredUsers}"
+                  AutoGenerateColumns="False"
+                  CanUserAddRows="False"
+                  SelectionMode="Single"
+                  IsReadOnly="True"
+                  SelectedItem="{Binding SelectedUser}">
+            <DataGrid.Columns>
+                <DataGridTextColumn Header="ФИО" Binding="{Binding Display}" Width="*"/>
+                <DataGridTextColumn Header="Отдел" Binding="{Binding Unit.Name}" Width="210"/>
+                <DataGridTextColumn Header="Должность" Binding="{Binding Role.Name}" Width="200"/>
+            </DataGrid.Columns>
+            <i:Interaction.Triggers>
+                <i:EventTrigger EventName="MouseDoubleClick">
+                    <i:InvokeCommandAction 
+                                Command="{Binding EditUserCommand}"
+                                CommandParameter="{Binding ElementName=UserGrid, 
+                                Path=SelectedItem}" />
+                </i:EventTrigger>
+            </i:Interaction.Triggers>
+        </DataGrid>
     </Grid>
-</Window>
+</UserControl>
